--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
     <body>This is just a test index file</body>
-    <p>This is a short paragraph</p>
+    <p>Short Paragraph</p>
+    <p>Practice makes a man perfect.</p>
 </html>
