Putting paragraph inside the body
This is to decorate the display.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <body>This is just a test index file</body>
+    <body>This is just a test index file
     <p>Short Paragraph</p>
     <p>Practice makes a man perfect.</p>
+    <p>this looks proper</p>
+    </body>
 </html>
